Composite primary key support added